[package]
name = "terminal-toys"
version = "0.5.0"
authors = ["Sebastian Thuemmel <sebastianthuemmel@yahoo.ca>"]
license = "MIT"
edition = "2021"
description = "terminal-toys is a collection of screensavers for the terminal."
repository = "https://github.com/Seebass22/terminal-toys"
keywords = ["terminal", "screensaver", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
glam = "0.29.2"
itertools = "0.14.0"
oorandom = "11.1.4"
ratatui = "0.29.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
